# JCLParser

./: .gitignore  CMakeLists.txt  README.md  build.sh  buildmac.sh  clean.sh  runTests.sh  setenv.sh
altsrc/: build.sh  gensh.c  jcl2sh.c  runTests.sh  setenv.sh
alttest/: basicJCL.sh  command.sh  crtTests.sh  errorScenarios.sh  inlinedd.sh  lazyproc.sh  multiLine.sh  odd.sh  output.sh  proc.sh
alttest/opttests/: scanSYS1Proclib.sh
alttestsrc/: basicJCL.template  cntl.template  command.template  errorScenarios.template  include.template  inlineGeneratedSYSIN.template  lazyproc.jcl  multiLine.template  odd.template
src/: gen.h  genjcl.c  gensh.c  gensh.h  jcl2jcl.c  jcl2sh.c  jcl2sh.h  jclargs.c  jclargs.h  jclmsgs.c  jclmsgs.h  scanjcl.c  scanjcl.h
tests/: cntl.sh  conditional.sh  include.sh  inlineGeneratedSYSIN.sh  regression.sh  testtree.sh
testsrc/: cancel.jcl  cntl.skipjcl  command.jcl  commented.jcl  comments.jcl  conditional.jcl  conditional.template  coupledd.jcl  crthfs.jcl  extraslashstar.jcl  gensysin.skipjcl  include.skipjcl  include.template  inlineGeneratedSYSIN.jcl  inlineGeneratedSYSIN.template  inlinedd.skipjcl  inlinedd.template  jeclcmd.jcl  jes3.jcl  longcard.jcl  multiLine.jcl  multiLine.skipjcl  multilinejob.skipjcl  odd.skipjcl  output.jcl  output.template  parmcomments.jcl  parmcomments.skipjcl  proc.jcl  proc.template  procnoparm.jcl  shortAndLong.errjcl  simplerinlinedd.jcl  splitsubparm.skipjcl  subparm.skipjcl
